# sirupateyAi

./: README.md
fastapi-student-assistant/: .env.example  README.md  pyproject.toml  requirements.txt
fastapi-student-assistant/alembic/: alembic.ini  env.py
fastapi-student-assistant/app/: __init__.py  main.py
fastapi-student-assistant/app/api/: __init__.py  deps.py
fastapi-student-assistant/app/api/v1/: api.py
fastapi-student-assistant/app/api/v1/endpoints/: __init__.py  calendar.py  career.py  followups.py  health.py  notes.py  reminders.py  roadmap.py  tips.py  voice.py
fastapi-student-assistant/app/core/: config.py  middleware.py  security.py
fastapi-student-assistant/app/db/: database.py
fastapi-student-assistant/app/models/: calendar.py  career.py  note.py  reminder.py  roadmap.py  tip.py  user.py
fastapi-student-assistant/app/schemas/: __init__.py  calendar.py  career.py  note.py  reminder.py  roadmap.py  tip.py  user.py
fastapi-student-assistant/app/services/: calendar.py  career.py  notes.py  reminders.py  roadmap.py  tips.py  voice.py
fastapi-student-assistant/tests/: conftest.py
fastapi-student-assistant/tests/api/v1/: test_endpoints.py
sathi-ai/: index.html  package-lock.json  package.json
sathi-ai/src/: App.css  App.jsx  LandingPage.jsx  index.css
sathi-ai/src/api/: client.js
sathi-ai/src/auth/: AuthContext.jsx  ProtectedRoute.jsx  authService.js
sathi-ai/src/components/Career/: CareerPathPage.jsx
sathi-ai/src/components/Chat/: MitraChat.jsx
sathi-ai/src/layout/: Mainpage.jsx  layout.css
(+21 files in other folders)
