[tool]
name = "fastapi-student-assistant"
version = "0.1.0"
description = "AI-powered student assistant web application"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.0"
uvicorn = "^0.17.0"
sqlalchemy = "^1.4.27"
pydantic = "^1.8.2"
python-jose = "^3.3.0"
alembic = "^1.7.5"
sqlite = "^3.36.0"
httpx = "^0.21.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
httpx = "^0.21.1"
mypy = "^0.910"
black = "^21.12b0"
isort = "^5.10.1"

[tool.poetry.scripts]
start = "uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload"